// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/ChatChannelPreview Default 1`] = `
<button
  style={
    Object {
      "background": "none",
      "border": "none",
      "display": "flex",
      "width": "600px",
    }
  }
>
  <div
    className="makeStyles-root-1"
  >
    <div
      className="makeStyles-root-7 makeStyles-root-8"
    >
      <div>
        <div
          className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-9 makeStyles-avatar-10 css-1a00onu-MuiAvatar-root"
          title="England"
        >
          <img
            alt="England"
            className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
            src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/England.svg"
          />
        </div>
      </div>
      <div>
        <div
          className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-9 makeStyles-avatar-11 css-1a00onu-MuiAvatar-root"
          title="France"
        >
          <img
            alt="France"
            className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
            src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
          />
        </div>
        <div
          className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-9 makeStyles-avatar-12 css-1a00onu-MuiAvatar-root"
          title="Germany"
        >
          <img
            alt="Germany"
            className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
            src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Germany.svg"
          />
        </div>
      </div>
    </div>
    <div
      className="makeStyles-messagePreviewContainer-2"
      title="Chat channel preview"
    >
      <h4
        className="MuiTypography-root MuiTypography-body1 makeStyles-messagePreviewTitle-3 css-rb48uj-MuiTypography-root"
      >
        England, France, Germany (3)
      </h4>
      <span
        className="MuiTypography-root MuiTypography-body2 makeStyles-messagePreviewText-4 css-fvst8m-MuiTypography-root"
      >
        <p
          className="MuiTypography-root MuiTypography-body2 makeStyles-messagePreviewLabel-5 makeStyles-messagePreviewLabel-6 css-fvst8m-MuiTypography-root"
          title="sender"
        >
          England: 
        </p>
        Hello fellow players.
      </span>
    </div>
  </div>
</button>
`;

exports[`Storyshots components/ChatChannelPreview Messages Since 1`] = `
<button
  style={
    Object {
      "background": "none",
      "border": "none",
      "display": "flex",
      "width": "600px",
    }
  }
>
  <div
    className="makeStyles-root-13"
  >
    <span
      className="MuiBadge-root css-1c32n2y-MuiBadge-root"
    >
      <div
        className="makeStyles-root-19 makeStyles-root-20"
      >
        <div>
          <div
            className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-21 makeStyles-avatar-22 css-1a00onu-MuiAvatar-root"
            title="France"
          >
            <img
              alt="France"
              className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
              src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
            />
          </div>
          <div
            className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-21 makeStyles-avatar-23 css-1a00onu-MuiAvatar-root"
            title="Germany"
          >
            <img
              alt="Germany"
              className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
              src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Germany.svg"
            />
          </div>
        </div>
      </div>
      <span
        className="MuiBadge-colorPrimary MuiBadge-badge MuiBadge-standard MuiBadge-anchorOriginTopRightCircular css-1fkl0a0-MuiBadge-badge"
      >
        2
      </span>
    </span>
    <div
      className="makeStyles-messagePreviewContainer-14"
      title="Chat channel preview"
    >
      <h4
        className="MuiTypography-root MuiTypography-body1 makeStyles-messagePreviewTitle-15 css-rb48uj-MuiTypography-root"
      >
        England, France, Germany (3)
      </h4>
      <span
        className="MuiTypography-root MuiTypography-body2 makeStyles-messagePreviewText-16 css-fvst8m-MuiTypography-root"
      >
        <p
          className="MuiTypography-root MuiTypography-body2 makeStyles-messagePreviewLabel-17 makeStyles-messagePreviewLabel-18 css-fvst8m-MuiTypography-root"
          title="sender"
        >
          You: 
        </p>
        Hello fellow players.
      </span>
    </div>
  </div>
</button>
`;

exports[`Storyshots components/ChatChannelPreview User Is Sender 1`] = `
<button
  style={
    Object {
      "background": "none",
      "border": "none",
      "display": "flex",
      "width": "600px",
    }
  }
>
  <div
    className="makeStyles-root-24"
  >
    <div
      className="makeStyles-root-30 makeStyles-root-31"
    >
      <div>
        <div
          className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-32 makeStyles-avatar-33 css-1a00onu-MuiAvatar-root"
          title="France"
        >
          <img
            alt="France"
            className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
            src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
          />
        </div>
        <div
          className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-32 makeStyles-avatar-34 css-1a00onu-MuiAvatar-root"
          title="Germany"
        >
          <img
            alt="Germany"
            className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
            src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Germany.svg"
          />
        </div>
      </div>
    </div>
    <div
      className="makeStyles-messagePreviewContainer-25"
      title="Chat channel preview"
    >
      <h4
        className="MuiTypography-root MuiTypography-body1 makeStyles-messagePreviewTitle-26 css-rb48uj-MuiTypography-root"
      >
        England, France, Germany (3)
      </h4>
      <span
        className="MuiTypography-root MuiTypography-body2 makeStyles-messagePreviewText-27 css-fvst8m-MuiTypography-root"
      >
        <p
          className="MuiTypography-root MuiTypography-body2 makeStyles-messagePreviewLabel-28 makeStyles-messagePreviewLabel-29 css-fvst8m-MuiTypography-root"
          title="sender"
        >
          You: 
        </p>
        Hello fellow players.
      </span>
    </div>
  </div>
</button>
`;

exports[`Storyshots components/ChatCreateChannelDialog Closed 1`] = `null`;

exports[`Storyshots components/ChatMessage Dark Color 1`] = `
<div
  className="makeStyles-root-43 makeStyles-root-48"
>
  <div />
  <div
    className="makeStyles-messageContainer-44 makeStyles-messageContainer-49"
  >
    <h6
      className="MuiTypography-root makeStyles-name-45 MuiTypography-subtitle2"
    >
      
       
      France
    </h6>
    <p
      className="MuiTypography-root makeStyles-text-46 MuiTypography-body1"
    >
      Hello there. This is a message of medium length. Don't you agree?
    </p>
    <span
      className="MuiTypography-root makeStyles-status-47 MuiTypography-caption"
    >
      07:11:49 01/08/2021
    </span>
  </div>
</div>
`;

exports[`Storyshots components/ChatMessage Long 1`] = `
<div
  className="makeStyles-root-15 makeStyles-root-20"
>
  <div />
  <div
    className="makeStyles-messageContainer-16 makeStyles-messageContainer-21"
  >
    <h6
      className="MuiTypography-root makeStyles-name-17 MuiTypography-subtitle2"
    >
      
       
      France
    </h6>
    <p
      className="MuiTypography-root makeStyles-text-18 MuiTypography-body1"
    >
      This is a reminder that the current phase will resolve in 1h0m0s (at 31 Jul 21 12:32 UTC), and you haven't declared that you are ready for the next phase. If you don't declare ready you will lose Quickness score. If you don't declare ready and don't provide any orders you will lose Reliability score, and be evicted from all staging game queues.
    </p>
    <span
      className="MuiTypography-root makeStyles-status-19 MuiTypography-caption"
    >
      07:11:49 01/08/2021
    </span>
  </div>
</div>
`;

exports[`Storyshots components/ChatMessage Medium 1`] = `
<div
  className="makeStyles-root-35 makeStyles-root-41"
  data-testid="message"
>
  <h6
    className="MuiTypography-root MuiTypography-subtitle2 makeStyles-name-36 message-sender css-3941kt-MuiTypography-root"
  >
    
     
    England
  </h6>
  <p
    className="MuiTypography-root MuiTypography-body1 makeStyles-text-37 message-text css-rb48uj-MuiTypography-root"
  >
    Hello there. This is a message of medium length. Don't you agree?
  </p>
  <span
    className="MuiTypography-root MuiTypography-caption makeStyles-status-38 message-status css-w6f2ch-MuiTypography-root"
  >
    12:32:12 31/7/2021
  </span>
</div>
`;

exports[`Storyshots components/ChatMessage Selfish 1`] = `
<div
  className="makeStyles-root-35 makeStyles-root-42"
  data-testid="message"
>
  <h6
    className="MuiTypography-root MuiTypography-subtitle2 makeStyles-name-36 message-sender css-3941kt-MuiTypography-root"
  >
    
     
    England
  </h6>
  <p
    className="MuiTypography-root MuiTypography-body1 makeStyles-text-37 message-text css-rb48uj-MuiTypography-root"
  >
    Hello there. This is a message of medium length. Don't you agree?
  </p>
  <span
    className="MuiTypography-root MuiTypography-caption makeStyles-status-38 message-status css-w6f2ch-MuiTypography-root"
  >
    12:32:12 31/7/2021
  </span>
</div>
`;

exports[`Storyshots components/ChatMessage Short 1`] = `
<div
  className="makeStyles-root-35 makeStyles-root-43"
  data-testid="message"
>
  <h6
    className="MuiTypography-root MuiTypography-subtitle2 makeStyles-name-36 message-sender css-3941kt-MuiTypography-root"
  >
    
     
    England
  </h6>
  <p
    className="MuiTypography-root MuiTypography-body1 makeStyles-text-37 message-text css-rb48uj-MuiTypography-root"
  >
    Short message
  </p>
  <span
    className="MuiTypography-root MuiTypography-caption makeStyles-status-38 message-status css-w6f2ch-MuiTypography-root"
  >
    12:32:12 31/7/2021
  </span>
</div>
`;

exports[`Storyshots components/ChatMessage Undelivered 1`] = `
<div
  className="makeStyles-root-35 makeStyles-root-44"
  data-testid="message"
>
  <h6
    className="MuiTypography-root MuiTypography-subtitle2 makeStyles-name-36 message-sender css-3941kt-MuiTypography-root"
  >
    
     
    England
  </h6>
  <p
    className="MuiTypography-root MuiTypography-body1 makeStyles-text-37 message-text css-rb48uj-MuiTypography-root"
  >
    Hello there. This is a message of medium length. Don't you agree?
  </p>
  <span
    className="MuiTypography-root MuiTypography-caption makeStyles-status-38 message-status css-w6f2ch-MuiTypography-root"
  >
    Sending...
  </span>
</div>
`;

exports[`Storyshots components/ChatMessageInput Default 1`] = `
<div
  className="makeStyles-root-84"
>
  <div
    className="makeStyles-subDiv-85"
  >
    <div
      className="MuiFormControl-root MuiTextField-root makeStyles-input-86"
      onKeyDown={[Function]}
    >
      <label
        className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
        data-shrink={false}
        htmlFor="chat-channel-input-field"
        id="chat-channel-input-field-label"
      >
        Message
      </label>
      <div
        className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline"
        onClick={[Function]}
      >
        <textarea
          aria-invalid={false}
          autoFocus={false}
          className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
          disabled={false}
          id="chat-channel-input-field"
          onAnimationStart={[Function]}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          required={false}
          rows="2"
          value=""
        />
        <fieldset
          aria-hidden={true}
          className="PrivateNotchedOutline-root-88 MuiOutlinedInput-notchedOutline"
        >
          <legend
            className="PrivateNotchedOutline-legendLabelled-90"
          >
            <span>
              Message
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
    <button
      className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiIconButton-label"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"
          />
        </svg>
      </span>
    </button>
  </div>
  <span
    className="MuiTypography-root makeStyles-prompt-87 MuiTypography-caption"
  >
    Ctrl + Enter to send
  </span>
</div>
`;

exports[`Storyshots components/ChatMessageInput Wide 1`] = `
<div
  style={
    Object {
      "width": "500px",
    }
  }
>
  <div
    className="makeStyles-root-92"
  >
    <div
      className="makeStyles-subDiv-93"
    >
      <div
        className="MuiFormControl-root MuiTextField-root makeStyles-input-94"
        onKeyDown={[Function]}
      >
        <label
          className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-outlined"
          data-shrink={false}
          htmlFor="chat-channel-input-field"
          id="chat-channel-input-field-label"
        >
          Message
        </label>
        <div
          className="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-multiline MuiOutlinedInput-multiline"
          onClick={[Function]}
        >
          <textarea
            aria-invalid={false}
            autoFocus={false}
            className="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline MuiOutlinedInput-inputMultiline"
            disabled={false}
            id="chat-channel-input-field"
            onAnimationStart={[Function]}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            rows="2"
            value=""
          />
          <fieldset
            aria-hidden={true}
            className="PrivateNotchedOutline-root-96 MuiOutlinedInput-notchedOutline"
          >
            <legend
              className="PrivateNotchedOutline-legendLabelled-98"
            >
              <span>
                Message
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
      <button
        className="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorPrimary"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiIconButton-label"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"
            />
          </svg>
        </span>
      </button>
    </div>
    <span
      className="MuiTypography-root makeStyles-prompt-95 MuiTypography-caption"
    >
      Ctrl + Enter to send
    </span>
  </div>
</div>
`;

exports[`Storyshots components/ChatMessageWithAvatar France 1`] = `
<div
  className="makeStyles-root-53 makeStyles-root-54"
>
  <div
    className="makeStyles-root-35 makeStyles-root-55"
    data-testid="message"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 makeStyles-name-36 message-sender css-3941kt-MuiTypography-root"
    >
      
       
      England
    </h6>
    <p
      className="MuiTypography-root MuiTypography-body1 makeStyles-text-37 message-text css-rb48uj-MuiTypography-root"
    >
      Hello there. This is a message of medium length. Don't you agree?
    </p>
    <span
      className="MuiTypography-root MuiTypography-caption makeStyles-status-38 message-status css-w6f2ch-MuiTypography-root"
    >
      12:32:12 31/7/2021
    </span>
  </div>
  <div
    className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-56 makeStyles-avatar-57 css-1a00onu-MuiAvatar-root"
    title="France"
  >
    <img
      alt="France"
      className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
      src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
    />
  </div>
</div>
`;

exports[`Storyshots components/ChatMessageWithAvatar Selfish 1`] = `
<div
  className="makeStyles-root-58 makeStyles-root-59"
>
  <div
    className="makeStyles-root-35 makeStyles-root-60"
    data-testid="message"
  >
    <h6
      className="MuiTypography-root MuiTypography-subtitle2 makeStyles-name-36 message-sender css-3941kt-MuiTypography-root"
    >
      
       
      England
    </h6>
    <p
      className="MuiTypography-root MuiTypography-body1 makeStyles-text-37 message-text css-rb48uj-MuiTypography-root"
    >
      Hello there. This is a message of medium length. Don't you agree?
    </p>
    <span
      className="MuiTypography-root MuiTypography-caption makeStyles-status-38 message-status css-w6f2ch-MuiTypography-root"
    >
      12:32:12 31/7/2021
    </span>
  </div>
  <div
    className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-61 makeStyles-avatar-62 css-1a00onu-MuiAvatar-root"
    title="France"
  >
    <img
      alt="France"
      className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
      src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
    />
  </div>
</div>
`;

exports[`Storyshots components/ChatNewMessagesBanner Default 1`] = `
<div
  className="makeStyles-root-63"
>
  <h6
    className="MuiTypography-root MuiTypography-subtitle2 css-19pnjn6-MuiTypography-root"
  >
    New messages
  </h6>
</div>
`;

exports[`Storyshots components/ChatPhaseDivider Default 1`] = `
<h6
  className="MuiTypography-root MuiTypography-subtitle2 css-aywqym-MuiTypography-root"
>
  ------ Fall 1903, Movement ------
</h6>
`;

exports[`Storyshots components/ErrorMessage Internal Server Error 1`] = `
<div
  className="makeStyles-root-64"
>
  <div>
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
      data-testid="WarningIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
      />
    </svg>
    <p
      className="MuiTypography-root MuiTypography-body1 css-rb48uj-MuiTypography-root"
      role="alert"
    >
      Internal server error
       (
      500
      )
    </p>
  </div>
</div>
`;

exports[`Storyshots components/Loading Default 1`] = `
<div
  className="makeStyles-root-65 makeStyles-root-66"
>
  <span
    className="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1ls149k-MuiCircularProgress-root"
    role="progressbar"
    style={
      Object {
        "height": 40,
        "width": 40,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
        cx={44}
        cy={44}
        fill="none"
        r={20.2}
        strokeWidth={3.6}
        style={Object {}}
      />
    </svg>
  </span>
</div>
`;

exports[`Storyshots components/NationAvatar England 1`] = `
<div
  className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-67 makeStyles-avatar-68 css-1a00onu-MuiAvatar-root"
  title="England"
>
  <img
    alt="England"
    className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
    src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/England.svg"
  />
</div>
`;

exports[`Storyshots components/NationAvatar France 1`] = `
<div
  className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-69 makeStyles-avatar-70 css-1a00onu-MuiAvatar-root"
  title="France"
>
  <img
    alt="France"
    className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
    src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
  />
</div>
`;

exports[`Storyshots components/NationAvatar Germany 1`] = `
<div
  className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-71 makeStyles-avatar-72 css-1a00onu-MuiAvatar-root"
  title="Germany"
>
  <img
    alt="Germany"
    className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
    src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Germany.svg"
  />
</div>
`;

exports[`Storyshots components/NationAvatar Muted 1`] = `
<span
  className="MuiBadge-root css-1c32n2y-MuiBadge-root"
>
  <div
    className="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault makeStyles-avatar-73 makeStyles-avatar-74 css-6foqxf-MuiAvatar-root"
    title="France"
  >
    Fra
  </div>
  <span
    className="MuiBadge-badge MuiBadge-standard MuiBadge-anchorOriginTopRightCircular css-1ie08l-MuiBadge-badge"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
      data-testid="MicOffIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 11h-1.7c0 .74-.16 1.43-.43 2.05l1.23 1.23c.56-.98.9-2.09.9-3.28zm-4.02.17c0-.06.02-.11.02-.17V5c0-1.66-1.34-3-3-3S9 3.34 9 5v.18l5.98 5.99zM4.27 3 3 4.27l6.01 6.01V11c0 1.66 1.33 3 2.99 3 .22 0 .44-.03.65-.08l1.66 1.66c-.71.33-1.5.52-2.31.52-2.76 0-5.3-2.1-5.3-5.1H5c0 3.41 2.72 6.23 6 6.72V21h2v-3.28c.91-.13 1.77-.45 2.54-.9L19.73 21 21 19.73 4.27 3z"
      />
    </svg>
  </span>
</span>
`;

exports[`Storyshots components/NationAvatar No Link Dark Color 1`] = `
<div
  className="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault makeStyles-avatar-75 makeStyles-avatar-76 css-6foqxf-MuiAvatar-root"
  title="France"
>
  Fra
</div>
`;

exports[`Storyshots components/NationAvatar No Link Long Abbreviation 1`] = `
<div
  className="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault makeStyles-avatar-77 makeStyles-avatar-78 css-6foqxf-MuiAvatar-root"
  title="France"
>
  Russ
</div>
`;

exports[`Storyshots components/NationAvatar No Link Short Abbreviation 1`] = `
<div
  className="MuiAvatar-root MuiAvatar-circular MuiAvatar-colorDefault makeStyles-avatar-79 makeStyles-avatar-80 css-6foqxf-MuiAvatar-root"
  title="France"
>
  Fra
</div>
`;

exports[`Storyshots components/NationAvatar Otto 1`] = `
<div
  className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-81 makeStyles-avatar-82 css-1a00onu-MuiAvatar-root"
  title="Diplicity"
>
  <img
    alt="Diplicity"
    className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
    src="https://diplicity-engine.appspot.com/img/otto.png"
  />
</div>
`;

exports[`Storyshots components/NationAvatar Russia 1`] = `
<div
  className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-83 makeStyles-avatar-84 css-1a00onu-MuiAvatar-root"
  title="Russia"
>
  <img
    alt="Russia"
    className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
    src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Russia.svg"
  />
</div>
`;

exports[`Storyshots components/NationAvatar Turkey 1`] = `
<div
  className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-85 makeStyles-avatar-86 css-1a00onu-MuiAvatar-root"
  title="Turkey"
>
  <img
    alt="Turkey"
    className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
    src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Turkey.svg"
  />
</div>
`;

exports[`Storyshots components/NationAvatarGroup Eight Avatars 1`] = `
<div
  className="makeStyles-root-87 makeStyles-root-88"
>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-89 makeStyles-avatar-90 css-1a00onu-MuiAvatar-root"
      title="France"
    >
      <img
        alt="France"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-89 makeStyles-avatar-91 css-1a00onu-MuiAvatar-root"
      title="Russia"
    >
      <img
        alt="Russia"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Russia.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-89 makeStyles-avatar-92 css-1a00onu-MuiAvatar-root"
      title="Germany"
    >
      <img
        alt="Germany"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Germany.svg"
      />
    </div>
  </div>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-89 makeStyles-avatar-93 css-1a00onu-MuiAvatar-root"
      title="England"
    >
      <img
        alt="England"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/England.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-89 makeStyles-avatar-94 css-1a00onu-MuiAvatar-root"
      title="Turkey"
    >
      <img
        alt="Turkey"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Turkey.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-89 makeStyles-avatar-95 css-1a00onu-MuiAvatar-root"
      title="France"
    >
      <img
        alt="France"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
      />
    </div>
  </div>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-89 makeStyles-avatar-96 css-1a00onu-MuiAvatar-root"
      title="Russia"
    >
      <img
        alt="Russia"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Russia.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-89 makeStyles-avatar-97 css-1a00onu-MuiAvatar-root"
      title="Germany"
    >
      <img
        alt="Germany"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Germany.svg"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots components/NationAvatarGroup Five Avatars 1`] = `
<div
  className="makeStyles-root-98 makeStyles-root-99"
>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-100 makeStyles-avatar-101 css-1a00onu-MuiAvatar-root"
      title="France"
    >
      <img
        alt="France"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
      />
    </div>
  </div>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-100 makeStyles-avatar-102 css-1a00onu-MuiAvatar-root"
      title="Russia"
    >
      <img
        alt="Russia"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Russia.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-100 makeStyles-avatar-103 css-1a00onu-MuiAvatar-root"
      title="Germany"
    >
      <img
        alt="Germany"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Germany.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-100 makeStyles-avatar-104 css-1a00onu-MuiAvatar-root"
      title="England"
    >
      <img
        alt="England"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/England.svg"
      />
    </div>
  </div>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-100 makeStyles-avatar-105 css-1a00onu-MuiAvatar-root"
      title="Turkey"
    >
      <img
        alt="Turkey"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Turkey.svg"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots components/NationAvatarGroup Four Avatars 1`] = `
<div
  className="makeStyles-root-106 makeStyles-root-107"
>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-108 makeStyles-avatar-109 css-1a00onu-MuiAvatar-root"
      title="France"
    >
      <img
        alt="France"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-108 makeStyles-avatar-110 css-1a00onu-MuiAvatar-root"
      title="Russia"
    >
      <img
        alt="Russia"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Russia.svg"
      />
    </div>
  </div>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-108 makeStyles-avatar-111 css-1a00onu-MuiAvatar-root"
      title="Germany"
    >
      <img
        alt="Germany"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Germany.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-108 makeStyles-avatar-112 css-1a00onu-MuiAvatar-root"
      title="England"
    >
      <img
        alt="England"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/England.svg"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots components/NationAvatarGroup Nine Avatars 1`] = `
<div
  className="makeStyles-root-113 makeStyles-root-114"
>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-115 makeStyles-avatar-116 css-1a00onu-MuiAvatar-root"
      title="France"
    >
      <img
        alt="France"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-115 makeStyles-avatar-117 css-1a00onu-MuiAvatar-root"
      title="Russia"
    >
      <img
        alt="Russia"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Russia.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-115 makeStyles-avatar-118 css-1a00onu-MuiAvatar-root"
      title="Germany"
    >
      <img
        alt="Germany"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Germany.svg"
      />
    </div>
  </div>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-115 makeStyles-avatar-119 css-1a00onu-MuiAvatar-root"
      title="England"
    >
      <img
        alt="England"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/England.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-115 makeStyles-avatar-120 css-1a00onu-MuiAvatar-root"
      title="Turkey"
    >
      <img
        alt="Turkey"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Turkey.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-115 makeStyles-avatar-121 css-1a00onu-MuiAvatar-root"
      title="France"
    >
      <img
        alt="France"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
      />
    </div>
  </div>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-115 makeStyles-avatar-122 css-1a00onu-MuiAvatar-root"
      title="Russia"
    >
      <img
        alt="Russia"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Russia.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-115 makeStyles-avatar-123 css-1a00onu-MuiAvatar-root"
      title="Germany"
    >
      <img
        alt="Germany"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Germany.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-115 makeStyles-avatar-124 css-1a00onu-MuiAvatar-root"
      title="England"
    >
      <img
        alt="England"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/England.svg"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots components/NationAvatarGroup One Avatar 1`] = `
<div
  className="makeStyles-root-125 makeStyles-root-126"
>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-127 makeStyles-avatar-128 css-1a00onu-MuiAvatar-root"
      title="France"
    >
      <img
        alt="France"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots components/NationAvatarGroup Seven Avatars 1`] = `
<div
  className="makeStyles-root-129 makeStyles-root-130"
>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-131 makeStyles-avatar-132 css-1a00onu-MuiAvatar-root"
      title="France"
    >
      <img
        alt="France"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-131 makeStyles-avatar-133 css-1a00onu-MuiAvatar-root"
      title="Russia"
    >
      <img
        alt="Russia"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Russia.svg"
      />
    </div>
  </div>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-131 makeStyles-avatar-134 css-1a00onu-MuiAvatar-root"
      title="Germany"
    >
      <img
        alt="Germany"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Germany.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-131 makeStyles-avatar-135 css-1a00onu-MuiAvatar-root"
      title="England"
    >
      <img
        alt="England"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/England.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-131 makeStyles-avatar-136 css-1a00onu-MuiAvatar-root"
      title="Turkey"
    >
      <img
        alt="Turkey"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Turkey.svg"
      />
    </div>
  </div>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-131 makeStyles-avatar-137 css-1a00onu-MuiAvatar-root"
      title="France"
    >
      <img
        alt="France"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-131 makeStyles-avatar-138 css-1a00onu-MuiAvatar-root"
      title="Russia"
    >
      <img
        alt="Russia"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Russia.svg"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots components/NationAvatarGroup Six Avatars 1`] = `
<div
  className="makeStyles-root-139 makeStyles-root-140"
>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-141 makeStyles-avatar-142 css-1a00onu-MuiAvatar-root"
      title="France"
    >
      <img
        alt="France"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-141 makeStyles-avatar-143 css-1a00onu-MuiAvatar-root"
      title="Russia"
    >
      <img
        alt="Russia"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Russia.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-141 makeStyles-avatar-144 css-1a00onu-MuiAvatar-root"
      title="Germany"
    >
      <img
        alt="Germany"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Germany.svg"
      />
    </div>
  </div>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-141 makeStyles-avatar-145 css-1a00onu-MuiAvatar-root"
      title="England"
    >
      <img
        alt="England"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/England.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-141 makeStyles-avatar-146 css-1a00onu-MuiAvatar-root"
      title="Turkey"
    >
      <img
        alt="Turkey"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Turkey.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-141 makeStyles-avatar-147 css-1a00onu-MuiAvatar-root"
      title="France"
    >
      <img
        alt="France"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots components/NationAvatarGroup Ten Avatars 1`] = `
<div
  className="makeStyles-root-148 makeStyles-root-149"
>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-150 makeStyles-avatar-151 css-1a00onu-MuiAvatar-root"
      title="France"
    >
      <img
        alt="France"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-150 makeStyles-avatar-152 css-1a00onu-MuiAvatar-root"
      title="Russia"
    >
      <img
        alt="Russia"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Russia.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-150 makeStyles-avatar-153 css-1a00onu-MuiAvatar-root"
      title="Germany"
    >
      <img
        alt="Germany"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Germany.svg"
      />
    </div>
  </div>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-150 makeStyles-avatar-154 css-1a00onu-MuiAvatar-root"
      title="England"
    >
      <img
        alt="England"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/England.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-150 makeStyles-avatar-155 css-1a00onu-MuiAvatar-root"
      title="Turkey"
    >
      <img
        alt="Turkey"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Turkey.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-150 makeStyles-avatar-156 css-1a00onu-MuiAvatar-root"
      title="France"
    >
      <img
        alt="France"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
      />
    </div>
  </div>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-150 makeStyles-avatar-157 css-1a00onu-MuiAvatar-root"
      title="Russia"
    >
      <img
        alt="Russia"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Russia.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-150 makeStyles-avatar-158 css-1a00onu-MuiAvatar-root"
      title="Germany"
    >
      <img
        alt="Germany"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Germany.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-150 makeStyles-avatar-159 css-1a00onu-MuiAvatar-root"
      title="England"
    >
      <img
        alt="England"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/England.svg"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots components/NationAvatarGroup Three Avatars 1`] = `
<div
  className="makeStyles-root-160 makeStyles-root-161"
>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-162 makeStyles-avatar-163 css-1a00onu-MuiAvatar-root"
      title="France"
    >
      <img
        alt="France"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
      />
    </div>
  </div>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-162 makeStyles-avatar-164 css-1a00onu-MuiAvatar-root"
      title="Russia"
    >
      <img
        alt="Russia"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Russia.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-162 makeStyles-avatar-165 css-1a00onu-MuiAvatar-root"
      title="Germany"
    >
      <img
        alt="Germany"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Germany.svg"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots components/NationAvatarGroup Two Avatars 1`] = `
<div
  className="makeStyles-root-166 makeStyles-root-167"
>
  <div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-168 makeStyles-avatar-169 css-1a00onu-MuiAvatar-root"
      title="France"
    >
      <img
        alt="France"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
      />
    </div>
    <div
      className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-168 makeStyles-avatar-170 css-1a00onu-MuiAvatar-root"
      title="Russia"
    >
      <img
        alt="Russia"
        className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
        src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/Russia.svg"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots components/Orders/NationSummary Confirmed Orders 1`] = `
<div
  style={
    Object {
      "width": "500px",
    }
  }
>
  <div
    className="makeStyles-root-171"
    title="France summary"
  >
    <div
      className="makeStyles-nationDetails-172"
    >
      <div>
        <div
          className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-174 makeStyles-avatar-175 css-1a00onu-MuiAvatar-root"
          title="France"
        >
          <img
            alt="France"
            className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
            src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
          />
        </div>
      </div>
      <div>
        <p
          className="MuiTypography-root MuiTypography-body1 css-rb48uj-MuiTypography-root"
        >
          France
        </p>
        <p
          className="MuiTypography-root MuiTypography-body2 css-fvst8m-MuiTypography-root"
        >
          3
           
          supply centers
        </p>
        <p
          className="MuiTypography-root MuiTypography-body2 css-fvst8m-MuiTypography-root"
        >
          0
           
          builds
        </p>
        <p
          className="MuiTypography-root MuiTypography-body2 css-fvst8m-MuiTypography-root"
        >
          0
           
          disbands
        </p>
      </div>
    </div>
    <div
      className="makeStyles-nationStatus-173"
    >
      <svg
        aria-hidden={true}
        aria-label="Confirmed their orders"
        aria-labelledby={null}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-mui-internal-clone-element={true}
        focusable="false"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        viewBox="0 0 24 24"
      >
        <path
          d="M9,0 C10.3,0 11.4,0.84 11.82,2 L11.82,2 L16,2 C17.1045695,2 18,2.8954305 18,4 L18,4 L18,18 C18,19.1045695 17.1045695,20 16,20 L16,20 L2,20 C0.8954305,20 0,19.1045695 0,18 L0,18 L0,4 C0,2.8954305 0.8954305,2 2,2 L2,2 L6.18,2 C6.6,0.84 7.7,0 9,0 Z M13.4347826,7 L7.70608696,12.7391304 L4.56521739,9.60869565 L3,11.173913 L7.70608696,15.8695652 L15,8.56521739 L13.4347826,7 Z M9,2 C8.44771525,2 8,2.44771525 8,3 C8,3.55228475 8.44771525,4 9,4 C9.55228475,4 10,3.55228475 10,3 C10,2.44771525 9.55228475,2 9,2 Z"
          id="order_confirmed"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/Orders/NationSummary Confirmed Orders And Wants Draw 1`] = `
<div
  style={
    Object {
      "width": "500px",
    }
  }
>
  <div
    className="makeStyles-root-176"
    title="France summary"
  >
    <div
      className="makeStyles-nationDetails-177"
    >
      <div>
        <div
          className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-179 makeStyles-avatar-180 css-1a00onu-MuiAvatar-root"
          title="France"
        >
          <img
            alt="France"
            className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
            src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
          />
        </div>
      </div>
      <div>
        <p
          className="MuiTypography-root MuiTypography-body1 css-rb48uj-MuiTypography-root"
        >
          France
        </p>
        <p
          className="MuiTypography-root MuiTypography-body2 css-fvst8m-MuiTypography-root"
        >
          3
           
          supply centers
        </p>
        <p
          className="MuiTypography-root MuiTypography-body2 css-fvst8m-MuiTypography-root"
        >
          0
           
          builds
        </p>
        <p
          className="MuiTypography-root MuiTypography-body2 css-fvst8m-MuiTypography-root"
        >
          0
           
          disbands
        </p>
      </div>
    </div>
    <div
      className="makeStyles-nationStatus-178"
    >
      <svg
        aria-hidden={true}
        aria-label="Confirmed their orders"
        aria-labelledby={null}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-mui-internal-clone-element={true}
        focusable="false"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        viewBox="0 0 24 24"
      >
        <path
          d="M9,0 C10.3,0 11.4,0.84 11.82,2 L11.82,2 L16,2 C17.1045695,2 18,2.8954305 18,4 L18,4 L18,18 C18,19.1045695 17.1045695,20 16,20 L16,20 L2,20 C0.8954305,20 0,19.1045695 0,18 L0,18 L0,4 C0,2.8954305 0.8954305,2 2,2 L2,2 L6.18,2 C6.6,0.84 7.7,0 9,0 Z M13.4347826,7 L7.70608696,12.7391304 L4.56521739,9.60869565 L3,11.173913 L7.70608696,15.8695652 L15,8.56521739 L13.4347826,7 Z M9,2 C8.44771525,2 8,2.44771525 8,3 C8,3.55228475 8.44771525,4 9,4 C9.55228475,4 10,3.55228475 10,3 C10,2.44771525 9.55228475,2 9,2 Z"
          id="order_confirmed"
        />
      </svg>
      <svg
        aria-hidden={true}
        aria-label="Wants draw"
        aria-labelledby={null}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-mui-internal-clone-element={true}
        focusable="false"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        viewBox="0 0 24 24"
      >
        <path
          d="M2.98188996,2.24133335 L3.88833335,3.148 L3.8,3.23743687 L20.7705627,20.2079996 L20.8593333,20.119 L21.3666663,20.6261097 L20.0261097,21.9666663 L14.4292636,16.3704135 C14.0775047,16.5664056 13.6995541,16.7212717 13.301866,16.8285576 L13,16.9 L13,19.08 C15.489899,19.4617845 15.9132657,21.2212572 15.9852522,21.8085585 L16,22 L8,22 L8.00876781,21.8621764 C8.05962111,21.354459 8.40542355,19.5936066 10.7568801,19.1228674 L11,19.08 L11,16.9 C9.11538462,16.5153846 7.61908284,15.0767751 7.15117205,13.224249 L7.1,13 L4,13 C2.95,13 2.0822314,12.1799587 2.00551277,11.1486946 L2,11 L2,4 L2.06033335,4 L1.64133335,3.58188996 L2.98188996,2.24133335 Z M17,2 L17,4 L22,4 L22,11 C22,12.05 21.1799587,12.9177686 20.1486946,12.9944872 L20,13 L16.9,13 C16.852859,13.2309911 16.7898842,13.4561487 16.7122542,13.6742943 L6.99933335,3.962 L7,2 L17,2 Z M4.06033335,6 L4,6 L4,11 L7,11 L6.99933335,8.939 L4.06033335,6 Z M20,6 L17,6 L17,11 L20,11 L20,6 Z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/Orders/NationSummary Is User 1`] = `
<div
  style={
    Object {
      "width": "500px",
    }
  }
>
  <div
    className="makeStyles-root-181"
    title="France summary"
  >
    <div
      className="makeStyles-nationDetails-182"
    >
      <div>
        <div
          className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-184 makeStyles-avatar-185 css-1a00onu-MuiAvatar-root"
          title="France"
        >
          <img
            alt="France"
            className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
            src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
          />
        </div>
      </div>
      <div>
        <p
          className="MuiTypography-root MuiTypography-body1 css-rb48uj-MuiTypography-root"
        >
          France (You)
        </p>
        <p
          className="MuiTypography-root MuiTypography-body2 css-fvst8m-MuiTypography-root"
        >
          3
           
          supply centers
        </p>
        <p
          className="MuiTypography-root MuiTypography-body2 css-fvst8m-MuiTypography-root"
        >
          (
          15 to win
          )
        </p>
        <p
          className="MuiTypography-root MuiTypography-body2 css-fvst8m-MuiTypography-root"
        >
          0
           
          builds
        </p>
        <p
          className="MuiTypography-root MuiTypography-body2 css-fvst8m-MuiTypography-root"
        >
          0
           
          disbands
        </p>
      </div>
    </div>
    <div
      className="makeStyles-nationStatus-183"
    />
  </div>
</div>
`;

exports[`Storyshots components/Orders/NationSummary No Orders Given 1`] = `
<div
  style={
    Object {
      "width": "500px",
    }
  }
>
  <div
    className="makeStyles-root-186"
    title="France summary"
  >
    <div
      className="makeStyles-nationDetails-187"
    >
      <div>
        <div
          className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-189 makeStyles-avatar-190 css-1a00onu-MuiAvatar-root"
          title="France"
        >
          <img
            alt="France"
            className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
            src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
          />
        </div>
      </div>
      <div>
        <p
          className="MuiTypography-root MuiTypography-body1 css-rb48uj-MuiTypography-root"
        >
          France
        </p>
        <p
          className="MuiTypography-root MuiTypography-body2 css-fvst8m-MuiTypography-root"
        >
          3
           
          supply centers
        </p>
        <p
          className="MuiTypography-root MuiTypography-body2 css-fvst8m-MuiTypography-root"
        >
          0
           
          builds
        </p>
        <p
          className="MuiTypography-root MuiTypography-body2 css-fvst8m-MuiTypography-root"
        >
          0
           
          disbands
        </p>
      </div>
    </div>
    <div
      className="makeStyles-nationStatus-188"
    >
      <svg
        aria-hidden={true}
        aria-label="Did not send orders"
        aria-labelledby={null}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-mui-internal-clone-element={true}
        focusable="false"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        viewBox="0 0 24 24"
      >
        <path
          d="M2.98188996,2.24133335 L21.3666663,20.6261097 L20.0261097,21.9666663 L19.0573333,20.998 L19,21 L5,21 C3.95,21 3.0822314,20.1799587 3.00551277,19.1486946 L3,19 L3,5 L3.00233335,4.942 L1.64133335,3.58188996 L2.98188996,2.24133335 Z M12,1 C13.235,1 14.2895,1.7581 14.75196,2.828465 L14.82,3 L19,3 C20.05,3 20.9177686,3.82004132 20.9944872,4.85130541 L21,5 L21,17.963 L16.037,13 L17,13 L17,11 L14.037,11 L12.037,9 L17,9 L17,7 L10.037,7 L6.037,3 L9.18,3 C9.579,1.898 10.5917,1.0848 11.80656,1.006235 L12,1 Z M13.0593333,15 L7,15 L7,17 L15.0593333,17 L13.0593333,15 Z M11.0593333,13 L9.06033335,11 L7,11 L7,13 L11.0593333,13 Z M12,3 C11.45,3 11,3.45 11,4 C11,4.55 11.45,5 12,5 C12.55,5 13,4.55 13,4 C13,3.45 12.55,3 12,3 Z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/Orders/NationSummary Supply Centers Plural 1`] = `
<div
  style={
    Object {
      "width": "500px",
    }
  }
>
  <div
    className="makeStyles-root-191"
    title="France summary"
  >
    <div
      className="makeStyles-nationDetails-192"
    >
      <div>
        <div
          className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-194 makeStyles-avatar-195 css-1a00onu-MuiAvatar-root"
          title="France"
        >
          <img
            alt="France"
            className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
            src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
          />
        </div>
      </div>
      <div>
        <p
          className="MuiTypography-root MuiTypography-body1 css-rb48uj-MuiTypography-root"
        >
          France
        </p>
        <p
          className="MuiTypography-root MuiTypography-body2 css-fvst8m-MuiTypography-root"
        >
          3
           
          supply centers
        </p>
        <p
          className="MuiTypography-root MuiTypography-body2 css-fvst8m-MuiTypography-root"
        >
          0
           
          builds
        </p>
        <p
          className="MuiTypography-root MuiTypography-body2 css-fvst8m-MuiTypography-root"
        >
          0
           
          disbands
        </p>
      </div>
    </div>
    <div
      className="makeStyles-nationStatus-193"
    />
  </div>
</div>
`;

exports[`Storyshots components/Orders/NationSummary Supply Centers Singular 1`] = `
<div
  style={
    Object {
      "width": "500px",
    }
  }
>
  <div
    className="makeStyles-root-196"
    title="France summary"
  >
    <div
      className="makeStyles-nationDetails-197"
    >
      <div>
        <div
          className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-199 makeStyles-avatar-200 css-1a00onu-MuiAvatar-root"
          title="France"
        >
          <img
            alt="France"
            className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
            src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
          />
        </div>
      </div>
      <div>
        <p
          className="MuiTypography-root MuiTypography-body1 css-rb48uj-MuiTypography-root"
        >
          France
        </p>
        <p
          className="MuiTypography-root MuiTypography-body2 css-fvst8m-MuiTypography-root"
        >
          1
           
          supply center
        </p>
        <p
          className="MuiTypography-root MuiTypography-body2 css-fvst8m-MuiTypography-root"
        >
          0
           
          builds
        </p>
        <p
          className="MuiTypography-root MuiTypography-body2 css-fvst8m-MuiTypography-root"
        >
          0
           
          disbands
        </p>
      </div>
    </div>
    <div
      className="makeStyles-nationStatus-198"
    />
  </div>
</div>
`;

exports[`Storyshots components/Orders/NationSummary Supply Centers Zero 1`] = `
<div
  style={
    Object {
      "width": "500px",
    }
  }
>
  <div
    className="makeStyles-root-201"
    title="France summary"
  >
    <div
      className="makeStyles-nationDetails-202"
    >
      <div>
        <div
          className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-204 makeStyles-avatar-205 css-1a00onu-MuiAvatar-root"
          title="France"
        >
          <img
            alt="France"
            className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
            src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
          />
        </div>
      </div>
      <div>
        <p
          className="MuiTypography-root MuiTypography-body1 css-rb48uj-MuiTypography-root"
        >
          France
        </p>
        <p
          className="MuiTypography-root MuiTypography-body2 css-fvst8m-MuiTypography-root"
        >
          0
           
          supply centers
        </p>
        <p
          className="MuiTypography-root MuiTypography-body2 css-fvst8m-MuiTypography-root"
        >
          0
           
          builds
        </p>
        <p
          className="MuiTypography-root MuiTypography-body2 css-fvst8m-MuiTypography-root"
        >
          0
           
          disbands
        </p>
      </div>
    </div>
    <div
      className="makeStyles-nationStatus-203"
    />
  </div>
</div>
`;

exports[`Storyshots components/Orders/NationSummary Wants Draw 1`] = `
<div
  style={
    Object {
      "width": "500px",
    }
  }
>
  <div
    className="makeStyles-root-206"
    title="France summary"
  >
    <div
      className="makeStyles-nationDetails-207"
    >
      <div>
        <div
          className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-209 makeStyles-avatar-210 css-1a00onu-MuiAvatar-root"
          title="France"
        >
          <img
            alt="France"
            className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
            src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
          />
        </div>
      </div>
      <div>
        <p
          className="MuiTypography-root MuiTypography-body1 css-rb48uj-MuiTypography-root"
        >
          France
        </p>
        <p
          className="MuiTypography-root MuiTypography-body2 css-fvst8m-MuiTypography-root"
        >
          3
           
          supply centers
        </p>
        <p
          className="MuiTypography-root MuiTypography-body2 css-fvst8m-MuiTypography-root"
        >
          0
           
          builds
        </p>
        <p
          className="MuiTypography-root MuiTypography-body2 css-fvst8m-MuiTypography-root"
        >
          0
           
          disbands
        </p>
      </div>
    </div>
    <div
      className="makeStyles-nationStatus-208"
    >
      <svg
        aria-hidden={true}
        aria-label="Wants draw"
        aria-labelledby={null}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-mui-internal-clone-element={true}
        focusable="false"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        viewBox="0 0 24 24"
      >
        <path
          d="M2.98188996,2.24133335 L3.88833335,3.148 L3.8,3.23743687 L20.7705627,20.2079996 L20.8593333,20.119 L21.3666663,20.6261097 L20.0261097,21.9666663 L14.4292636,16.3704135 C14.0775047,16.5664056 13.6995541,16.7212717 13.301866,16.8285576 L13,16.9 L13,19.08 C15.489899,19.4617845 15.9132657,21.2212572 15.9852522,21.8085585 L16,22 L8,22 L8.00876781,21.8621764 C8.05962111,21.354459 8.40542355,19.5936066 10.7568801,19.1228674 L11,19.08 L11,16.9 C9.11538462,16.5153846 7.61908284,15.0767751 7.15117205,13.224249 L7.1,13 L4,13 C2.95,13 2.0822314,12.1799587 2.00551277,11.1486946 L2,11 L2,4 L2.06033335,4 L1.64133335,3.58188996 L2.98188996,2.24133335 Z M17,2 L17,4 L22,4 L22,11 C22,12.05 21.1799587,12.9177686 20.1486946,12.9944872 L20,13 L16.9,13 C16.852859,13.2309911 16.7898842,13.4561487 16.7122542,13.6742943 L6.99933335,3.962 L7,2 L17,2 Z M4.06033335,6 L4,6 L4,11 L7,11 L6.99933335,8.939 L4.06033335,6 Z M20,6 L17,6 L17,11 L20,11 L20,6 Z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/Orders/NationSummary Wants Draw And No Orders Given 1`] = `
<div
  style={
    Object {
      "width": "500px",
    }
  }
>
  <div
    className="makeStyles-root-211"
    title="France summary"
  >
    <div
      className="makeStyles-nationDetails-212"
    >
      <div>
        <div
          className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-214 makeStyles-avatar-215 css-1a00onu-MuiAvatar-root"
          title="France"
        >
          <img
            alt="France"
            className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
            src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
          />
        </div>
      </div>
      <div>
        <p
          className="MuiTypography-root MuiTypography-body1 css-rb48uj-MuiTypography-root"
        >
          France
        </p>
        <p
          className="MuiTypography-root MuiTypography-body2 css-fvst8m-MuiTypography-root"
        >
          3
           
          supply centers
        </p>
        <p
          className="MuiTypography-root MuiTypography-body2 css-fvst8m-MuiTypography-root"
        >
          0
           
          builds
        </p>
        <p
          className="MuiTypography-root MuiTypography-body2 css-fvst8m-MuiTypography-root"
        >
          0
           
          disbands
        </p>
      </div>
    </div>
    <div
      className="makeStyles-nationStatus-213"
    >
      <svg
        aria-hidden={true}
        aria-label="Wants draw"
        aria-labelledby={null}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-mui-internal-clone-element={true}
        focusable="false"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        viewBox="0 0 24 24"
      >
        <path
          d="M2.98188996,2.24133335 L3.88833335,3.148 L3.8,3.23743687 L20.7705627,20.2079996 L20.8593333,20.119 L21.3666663,20.6261097 L20.0261097,21.9666663 L14.4292636,16.3704135 C14.0775047,16.5664056 13.6995541,16.7212717 13.301866,16.8285576 L13,16.9 L13,19.08 C15.489899,19.4617845 15.9132657,21.2212572 15.9852522,21.8085585 L16,22 L8,22 L8.00876781,21.8621764 C8.05962111,21.354459 8.40542355,19.5936066 10.7568801,19.1228674 L11,19.08 L11,16.9 C9.11538462,16.5153846 7.61908284,15.0767751 7.15117205,13.224249 L7.1,13 L4,13 C2.95,13 2.0822314,12.1799587 2.00551277,11.1486946 L2,11 L2,4 L2.06033335,4 L1.64133335,3.58188996 L2.98188996,2.24133335 Z M17,2 L17,4 L22,4 L22,11 C22,12.05 21.1799587,12.9177686 20.1486946,12.9944872 L20,13 L16.9,13 C16.852859,13.2309911 16.7898842,13.4561487 16.7122542,13.6742943 L6.99933335,3.962 L7,2 L17,2 Z M4.06033335,6 L4,6 L4,11 L7,11 L6.99933335,8.939 L4.06033335,6 Z M20,6 L17,6 L17,11 L20,11 L20,6 Z"
        />
      </svg>
      <svg
        aria-hidden={true}
        aria-label="Did not send orders"
        aria-labelledby={null}
        className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-mui-internal-clone-element={true}
        focusable="false"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        viewBox="0 0 24 24"
      >
        <path
          d="M2.98188996,2.24133335 L21.3666663,20.6261097 L20.0261097,21.9666663 L19.0573333,20.998 L19,21 L5,21 C3.95,21 3.0822314,20.1799587 3.00551277,19.1486946 L3,19 L3,5 L3.00233335,4.942 L1.64133335,3.58188996 L2.98188996,2.24133335 Z M12,1 C13.235,1 14.2895,1.7581 14.75196,2.828465 L14.82,3 L19,3 C20.05,3 20.9177686,3.82004132 20.9944872,4.85130541 L21,5 L21,17.963 L16.037,13 L17,13 L17,11 L14.037,11 L12.037,9 L17,9 L17,7 L10.037,7 L6.037,3 L9.18,3 C9.579,1.898 10.5917,1.0848 11.80656,1.006235 L12,1 Z M13.0593333,15 L7,15 L7,17 L15.0593333,17 L13.0593333,15 Z M11.0593333,13 L9.06033335,11 L7,11 L7,13 L11.0593333,13 Z M12,3 C11.45,3 11,3.45 11,4 C11,4.55 11.45,5 12,5 C12.55,5 13,4.55 13,4 C13,3.45 12.55,3 12,3 Z"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/Orders/Order Default 1`] = `
<div
  style={
    Object {
      "width": "500px",
    }
  }
>
  <div
    className="makeStyles-root-216"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 css-rb48uj-MuiTypography-root"
    >
      Trieste move to Adriatic Sea
    </p>
  </div>
  <ul
    className="makeStyles-orderInconsistencies-218"
  />
</div>
`;

exports[`Storyshots components/Orders/Order Inconsistency 1`] = `
<div
  style={
    Object {
      "width": "500px",
    }
  }
>
  <div
    className="makeStyles-root-220"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 css-rb48uj-MuiTypography-root"
    >
      Trieste move to Adriatic Sea
    </p>
  </div>
  <ul
    className="makeStyles-orderInconsistencies-222"
  >
    <li>
      <p
        className="MuiTypography-root MuiTypography-body2 css-fvst8m-MuiTypography-root"
      >
        Doesn't match order for Burgundy
      </p>
    </li>
  </ul>
</div>
`;

exports[`Storyshots components/Orders/Order Multiple Inconsistencies 1`] = `
<div
  style={
    Object {
      "width": "500px",
    }
  }
>
  <div
    className="makeStyles-root-224"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 css-rb48uj-MuiTypography-root"
    >
      Trieste move to Adriatic Sea
    </p>
  </div>
  <ul
    className="makeStyles-orderInconsistencies-226"
  >
    <li>
      <p
        className="MuiTypography-root MuiTypography-body2 css-fvst8m-MuiTypography-root"
      >
        Doesn't match order for Burgundy
      </p>
    </li>
    <li>
      <p
        className="MuiTypography-root MuiTypography-body2 css-fvst8m-MuiTypography-root"
      >
        No matching convoy
      </p>
    </li>
  </ul>
</div>
`;

exports[`Storyshots components/Orders/Order Resolved Bounce 1`] = `
<div
  style={
    Object {
      "width": "500px",
    }
  }
>
  <div
    className="makeStyles-root-228"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 css-rb48uj-MuiTypography-root"
    >
      Trieste move to Adriatic Sea
    </p>
    <p
      className="MuiTypography-root MuiTypography-body1 makeStyles-orderResolution-229 makeStyles-orderResolution-231 css-rb48uj-MuiTypography-root"
    >
      Bounced
    </p>
  </div>
  <ul
    className="makeStyles-orderInconsistencies-230"
  />
</div>
`;

exports[`Storyshots components/Orders/Order Resolved Success 1`] = `
<div
  style={
    Object {
      "width": "500px",
    }
  }
>
  <div
    className="makeStyles-root-232"
  >
    <p
      className="MuiTypography-root MuiTypography-body1 css-rb48uj-MuiTypography-root"
    >
      Trieste move to Adriatic Sea
    </p>
    <p
      className="MuiTypography-root MuiTypography-body1 makeStyles-orderResolution-233 makeStyles-orderResolution-235 css-rb48uj-MuiTypography-root"
    >
      Success
    </p>
  </div>
  <ul
    className="makeStyles-orderInconsistencies-234"
  />
</div>
`;

exports[`Storyshots components/PhaseSelector First Turn 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-root-255 css-bhp9pd-MuiPaper-root-MuiCard-root"
  title="phase selector"
>
  <button
    className="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeLarge css-mf1cb5-MuiButtonBase-root-MuiIconButton-root"
    disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={-1}
    title="show previous phase"
    type="button"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
      data-testid="ChevronLeftIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
      />
    </svg>
  </button>
  <div
    className="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary css-1ccycko-MuiInputBase-root-MuiOutlinedInput-root"
    disableUnderline={true}
    onClick={[Function]}
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      className="MuiSelect-select MuiSelect-outlined MuiOutlinedInput-input MuiInputBase-input css-11u53oe-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="button"
      tabIndex={0}
    >
      Spring 1901, Movement
    </div>
    <input
      aria-hidden={true}
      className="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
      onAnimationStart={[Function]}
      onChange={[Function]}
      tabIndex={-1}
      value={1}
    />
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-hfutr2-MuiSvgIcon-root-MuiSelect-icon"
      data-testid="ArrowDropDownIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
    </svg>
    <fieldset
      aria-hidden={true}
      className="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
    >
      <legend
        className="css-nnbavb"
      >
        <span
          className="notranslate"
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203;",
            }
          }
        />
      </legend>
    </fieldset>
  </div>
  <button
    className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-mf1cb5-MuiButtonBase-root-MuiIconButton-root"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    title="show next phase"
    type="button"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
      data-testid="ChevronRightIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots components/PhaseSelector Last Turn 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-root-256 css-bhp9pd-MuiPaper-root-MuiCard-root"
  title="phase selector"
>
  <button
    className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-mf1cb5-MuiButtonBase-root-MuiIconButton-root"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    title="show previous phase"
    type="button"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
      data-testid="ChevronLeftIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
      />
    </svg>
  </button>
  <div
    className="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary css-1ccycko-MuiInputBase-root-MuiOutlinedInput-root"
    disableUnderline={true}
    onClick={[Function]}
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      className="MuiSelect-select MuiSelect-outlined MuiOutlinedInput-input MuiInputBase-input css-11u53oe-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="button"
      tabIndex={0}
    >
      Fall 1901, Adjustment
    </div>
    <input
      aria-hidden={true}
      className="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
      onAnimationStart={[Function]}
      onChange={[Function]}
      tabIndex={-1}
      value={5}
    />
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-hfutr2-MuiSvgIcon-root-MuiSelect-icon"
      data-testid="ArrowDropDownIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
    </svg>
    <fieldset
      aria-hidden={true}
      className="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
    >
      <legend
        className="css-nnbavb"
      >
        <span
          className="notranslate"
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203;",
            }
          }
        />
      </legend>
    </fieldset>
  </div>
  <button
    className="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeLarge css-mf1cb5-MuiButtonBase-root-MuiIconButton-root"
    disabled={true}
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={-1}
    title="show next phase"
    type="button"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
      data-testid="ChevronRightIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots components/PhaseSelector Middle Turn 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-root-257 css-bhp9pd-MuiPaper-root-MuiCard-root"
  title="phase selector"
>
  <button
    className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-mf1cb5-MuiButtonBase-root-MuiIconButton-root"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    title="show previous phase"
    type="button"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
      data-testid="ChevronLeftIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
      />
    </svg>
  </button>
  <div
    className="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary css-1ccycko-MuiInputBase-root-MuiOutlinedInput-root"
    disableUnderline={true}
    onClick={[Function]}
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      className="MuiSelect-select MuiSelect-outlined MuiOutlinedInput-input MuiInputBase-input css-11u53oe-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      role="button"
      tabIndex={0}
    >
      Spring 1901, Retreat
    </div>
    <input
      aria-hidden={true}
      className="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
      onAnimationStart={[Function]}
      onChange={[Function]}
      tabIndex={-1}
      value={2}
    />
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-hfutr2-MuiSvgIcon-root-MuiSelect-icon"
      data-testid="ArrowDropDownIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M7 10l5 5 5-5z"
      />
    </svg>
    <fieldset
      aria-hidden={true}
      className="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
    >
      <legend
        className="css-nnbavb"
      >
        <span
          className="notranslate"
          dangerouslySetInnerHTML={
            Object {
              "__html": "&#8203;",
            }
          }
        />
      </legend>
    </fieldset>
  </div>
  <button
    className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-mf1cb5-MuiButtonBase-root-MuiIconButton-root"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex={0}
    title="show next phase"
    type="button"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
      data-testid="ChevronRightIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots components/PhaseSelector No Turn 1`] = `null`;

exports[`Storyshots components/PlayerCount Default 1`] = `
<div
  className="makeStyles-root-259"
>
  <svg
    aria-hidden={true}
    className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
    data-testid="PeopleIcon"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
    />
  </svg>
  <p
    className="MuiTypography-root MuiTypography-body1 css-rb48uj-MuiTypography-root"
  >
    3
     / 
    7
  </p>
</div>
`;

exports[`Storyshots components/PlayerCount Zero 1`] = `
<div
  className="makeStyles-root-260"
>
  <svg
    aria-hidden={true}
    className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
    data-testid="PeopleIcon"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
    />
  </svg>
  <p
    className="MuiTypography-root MuiTypography-body1 css-rb48uj-MuiTypography-root"
  >
    0
     / 
    7
  </p>
</div>
`;

exports[`Storyshots pages/Orders Default 1`] = `
<div
  className="makeStyles-root-236"
>
  <div
    className="MuiContainer-root MuiContainer-maxWidthLg makeStyles-container-238 css-1oqqzyl-MuiContainer-root"
  >
    <div
      className="makeStyles-phaseSelectorContainer-237"
    >
      <div
        className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root makeStyles-root-245 css-bhp9pd-MuiPaper-root-MuiCard-root"
        title="phase selector"
      >
        <button
          className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-mf1cb5-MuiButtonBase-root-MuiIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          title="show previous phase"
          type="button"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="ChevronLeftIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
            />
          </svg>
        </button>
        <div
          className="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary css-1ccycko-MuiInputBase-root-MuiOutlinedInput-root"
          disableUnderline={true}
          onClick={[Function]}
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            className="MuiSelect-select MuiSelect-outlined MuiOutlinedInput-input MuiInputBase-input css-11u53oe-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onMouseDown={[Function]}
            role="button"
            tabIndex={0}
          >
            Fall 1901, Adjustment
          </div>
          <input
            aria-hidden={true}
            className="MuiSelect-nativeInput css-yf8vq0-MuiSelect-nativeInput"
            onAnimationStart={[Function]}
            onChange={[Function]}
            tabIndex={-1}
            value={5}
          />
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconOutlined css-hfutr2-MuiSvgIcon-root-MuiSelect-icon"
            data-testid="ArrowDropDownIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
          <fieldset
            aria-hidden={true}
            className="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
          >
            <legend
              className="css-nnbavb"
            >
              <span
                className="notranslate"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
        </div>
        <button
          className="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeLarge css-mf1cb5-MuiButtonBase-root-MuiIconButton-root"
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={-1}
          title="show next phase"
          type="button"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="ChevronRightIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="makeStyles-nationSummaryList-239"
    >
      <div>
        <div
          className="makeStyles-nationSummaryContainer-240"
        >
          <div
            className="makeStyles-root-246"
            title="France summary"
          >
            <div
              className="makeStyles-nationDetails-247"
            >
              <div>
                <div
                  className="MuiAvatar-root MuiAvatar-circular makeStyles-avatar-249 makeStyles-avatar-250 css-1a00onu-MuiAvatar-root"
                  title="France"
                >
                  <img
                    alt="France"
                    className="MuiAvatar-img css-1pqm26d-MuiAvatar-img"
                    src="https://diplicity-engine.appspot.com/Variant/Classical/Flags/France.svg"
                  />
                </div>
              </div>
              <div>
                <p
                  className="MuiTypography-root MuiTypography-body1 css-rb48uj-MuiTypography-root"
                >
                  France
                </p>
                <p
                  className="MuiTypography-root MuiTypography-body2 css-fvst8m-MuiTypography-root"
                >
                  3
                   
                  supply centers
                </p>
              </div>
            </div>
            <div
              className="makeStyles-nationStatus-248"
            />
          </div>
        </div>
        <ul
          className="makeStyles-ordersList-241"
        >
          <li>
            <div
              className="makeStyles-root-251"
            >
              <p
                className="MuiTypography-root MuiTypography-body1 css-rb48uj-MuiTypography-root"
              >
                Trieste move to Albania
              </p>
            </div>
            <ul
              className="makeStyles-orderInconsistencies-253"
            />
          </li>
        </ul>
        <ul
          className="makeStyles-homelessInconsistenciesList-242"
        />
      </div>
    </div>
  </div>
  <div
    className="makeStyles-bottomBar-243"
  >
    <button
      className="MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButtonBase-root makeStyles-confirmOrdersButton-244 css-1c5tu40-MuiButtonBase-root-MuiButton-root"
      disabled={false}
      onBlur={[Function]}
      onContextMenu={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <label
        className="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
      >
        <span
          className="MuiCheckbox-root MuiCheckbox-colorPrimary MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root css-1d9iknj-MuiButtonBase-root-MuiCheckbox-root"
          onBlur={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <input
            checked={false}
            className="PrivateSwitchBase-input css-1m9pwf3"
            data-indeterminate={false}
            disabled={false}
            onChange={[Function]}
            type="checkbox"
          />
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="CheckBoxOutlineBlankIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
          </svg>
        </span>
        <span
          className="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-rb48uj-MuiTypography-root"
        >
          Confirm orders
        </span>
      </label>
    </button>
    <span
      className="MuiTypography-root MuiTypography-caption css-w6f2ch-MuiTypography-root"
    >
      When you're ready for the next turn
    </span>
  </div>
</div>
`;
